add operationId to api docs
